Fix responsiveness on mobile Remove chart-container class

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,3 @@
 canvas {
     border: 1px dotted #3e95cd;
 }
-
-.chart-container {
-    position: relative;
-    margin: auto;
-    height: 50vh;
-    width: 50vw;
-}
